# k8s-course

./: .gitignore  Intro.md  README.md  pod.http  pod.yaml  recapitulando.md  start.sh
aula10/: README.md
aula4/: configs.yaml  emptydir.yaml  hostpath.yaml  jobs.yaml  namespace.yaml  statefulset.yaml
aula5/: externalname.yaml  full-deployment.yaml
aula6/: README.md  csr.yaml  docker-compose.yaml  master_dump.sql  mysqld.sh  myuser.crt  rolebinding.yaml  serviceaccount.yaml  stress.sh  user2.csr  user2.key  vote.sh
aula6-7/: stress.sh  vote.sh
aula7/: clusterolebinding.yaml
aula8/: README.md  oidc-example.yaml  oidc.sh  role.yaml  serviceaccount-example.yaml  static-token-example.yaml  token.csv  user2.crt  user2.csr  user2.key  x509-example.yaml
aula9/: README.md  daemonset.yaml  limitrange-container.yaml  limitrange-pod.yaml  limitrange-volume.yaml  namespace.yaml  (+1 more)
k8s-rust-example/: .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  cloudbuild.yaml  docker-compose.yml  mock_data.json  package.json  request.sh  run.sh  test.sh
k8s-rust-example/.docker/grafana/: datasources.yml
k8s-rust-example/.docker/loki/: loki.config.yml
k8s-rust-example/.husky/: commit-msg
k8s-rust-example/docs/: rust.md
k8s-rust-example/examples/: index.html
k8s-rust-example/src/: config.rs  log.rs  main.rs  server.rs
k8s-rust-example/src/controllers/: mock_controller.rs
k8s-rust-example/src/controllers/macros/: response_status.rs
k8s-rust-example/src/database/: db.rs
k8s-rust-example/src/services/: match_mock.rs  test_mock_data.json
(+108 files in other folders)
