[package]
name = "http_mock_server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.22"
# mysql = "22.2.0"
serde = "1.0.144"
serde_json = "1.0.85"
regex = "1"
pretty_assertions = "1.3.0"

[dev-dependencies]
rustfmt = "0.10.0"
